--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ flask-cors
 python-dotenv
 google-generativeai
 googletrans==4.0.0-rc1
-numpy
-tensorflow (note: large; consider moving heavy local model inference off Render free tier or use Cloud Run)
+numpy==1.26.4
+tensorflow-cpu==2.16.1
+gunicorn
